# gtktemplate

./: .gitignore  Makefile.am  README  TODO  autogen.sh  configure.ac  reset-project.sh
src/: Application.vala  MainWindow.vala  Makefile.am
vapi/: vconfig.vapi
